mdapi_output/objects/Dataset_Event__e.object
<CustomObject>
    <label>Dataset Event</label>
    <pluralLabel>Dataset Events</pluralLabel>
    <fields>
        <fullName>Action__c</fullName>
        <label>Action</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dataset_Id__c</fullName>
        <label>Dataset Id</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Message__c</fullName>
        <label>Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>